[gd_scene load_steps=5 format=3 uid="uid://b7r3rrga5w2bb"]

[ext_resource type="Script" path="res://Assets/Modules/UI/Panels/UIDialogPanel.gd" id="1_p4jy3"]
[ext_resource type="Shader" path="res://Assets/Shaders/blur.gdshader" id="2_pxog1"]
[ext_resource type="Theme" uid="uid://b7w2njqwy08yh" path="res://Assets/Modules/UI/Themes/ingame_menu_theme.tres" id="2_xbsfp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lxg88"]
shader = ExtResource("2_pxog1")

[node name="UIDialogPanel" type="CanvasLayer" node_paths=PackedStringArray("Root", "SkipButton", "NextStepButton", "DialogPicture", "Speakers", "SpeakerNameLabel", "DialogLabel")]
process_mode = 3
layer = 10
script = ExtResource("1_p4jy3")
Root = NodePath("Root")
SkipButton = NodePath("Root/SettingsButton")
NextStepButton = NodePath("Root/DialogLine/NextStepButton")
DialogPicture = NodePath("Root/DialogPicture")
Speakers = [NodePath("Root/SpeakerLeft"), NodePath("Root/SpeakerRight")]
SpeakerNameLabel = NodePath("Root/DialogLine/NameLabel")
DialogLabel = NodePath("Root/DialogLine/DialogLabel")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dark" type="ColorRect" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.752941)

[node name="Blur" type="ColorRect" parent="Root"]
material = SubResource("ShaderMaterial_lxg88")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogPicture" type="TextureRect" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsButton" type="Button" parent="Root"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -152.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = 84.0
grow_horizontal = 0
theme = ExtResource("2_xbsfp")
text = "Close"

[node name="SpeakerLeft" type="TextureRect" parent="Root"]
layout_mode = 0
offset_left = -64.0
offset_top = 56.0
offset_right = 960.0
offset_bottom = 1080.0
expand_mode = 1
stretch_mode = 5

[node name="SpeakerRight" type="TextureRect" parent="Root"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 64.0
offset_top = 56.0
offset_right = 1088.0
offset_bottom = 1080.0
grow_horizontal = 0
scale = Vector2(-1, 1)
expand_mode = 1
stretch_mode = 5

[node name="DialogLine" type="ColorRect" parent="Root"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -248.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 0.501961)

[node name="DialogLabel" type="Label" parent="Root/DialogLine"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = -60.0
offset_right = 1728.0
offset_bottom = 69.0
grow_vertical = 2
theme = ExtResource("2_xbsfp")
theme_override_font_sizes/font_size = 36
text = "Very very long text from characters. Very very long text from characters. Very very long text from characters. Very very long text from characters

Very very long text from characters. Very very long text from characters"
autowrap_mode = 2

[node name="NextStepButton" type="Button" parent="Root/DialogLine"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="Root/DialogLine"]
layout_mode = 0
offset_left = 128.0
offset_top = -32.0
offset_right = 384.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 26
text = "Name left"
horizontal_alignment = 1
vertical_alignment = 1
